version/0.12/_sources/examples/index.rst.txt
:orphan:

.. _gallery:

========
Examples
========
These examples demonstrate the behavior and usage of DPF-Core.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Basic DPF examples
==================
These examples explain the basic concepts of DPF.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to open a result file and do some basic postprocessing.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-basic_example_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_00-basic_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic DPF-Core usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, operators provide the primary method for interacting with and extracting results. Withi...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-basic_operators_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_01-basic_operators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Operators overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, the field is the main simulation data container. During a numerical simulation, the res...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_02-basic_field_containers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_02-basic_field_containers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Field and field containers overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can create your field, fields container, or meshed region to use DPF operators with your ow...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_03-create_entities_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_03-create_entities.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create your own entities using DPF operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Reducing the number of calls to the server is key to improving performance. Using the as_local_...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_05-use_local_data_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_05-use_local_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bring a field's data locally to improve performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which is an instance created by the ansys.dpf.core.mod...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_07-use_result_helpers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_07-use_result_helpers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use result helpers to load custom data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.mode...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_08-results_over_time_subset_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_08-results_over_time_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom time domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.mode...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_09-results_over_space_subset_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_09-results_over_space_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom space domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="DPF provides operators for implementing mathematical operations, ranging from addition and mult...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_10-math_operations_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_10-math_operations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mathematical Operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Material properties are assigned to each element in APDL and by default they are written out in...">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_12-get_material_properties_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_12-get_material_properties.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get material properties from the result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Transient analysis examples
===========================
These examples show how to use DPF to extract and plot displacements,
stresses, and strains for a transient result.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to postprocess a transient result and visualize the outputs.">

.. only:: html

  .. image:: /examples/01-transient_analyses/images/thumb/sphx_glr_00-basic_transient_thumb.png
    :alt:

  :ref:`sphx_glr_examples_01-transient_analyses_00-basic_transient.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Transient analysis result example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use a model&#x27;s result to choose a time scoping.">

.. only:: html

  .. image:: /examples/01-transient_analyses/images/thumb/sphx_glr_01-transient_easy_time_scoping_thumb.png
    :alt:

  :ref:`sphx_glr_examples_01-transient_analyses_01-transient_easy_time_scoping.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Choose a time scoping for a transient analysis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Modal analysis examples
=======================
These examples show how to use DPF to extract and manipulate
results from modal analyses.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class which instances are created by the ansys.dpf.core.model...">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_00-compare_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-modal_analyses_00-compare_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use Result Helpers to compare mode shapes for solids and then shells</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to extract mode shapes from a modal analysis result and how to plot and ...">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_01-plot_and_animate_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-modal_analyses_01-plot_and_animate_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot and animate mode shapes with DPF</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Harmonic analysis examples
===========================
These examples show how to use DPF to extract and manipulate
results from harmonic analyses.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute a multi-harmonic response using fft transformations.">

.. only:: html

  .. image:: /examples/03-harmonic_analyses/images/thumb/sphx_glr_00-multi_harmonic_thumb.png
    :alt:

  :ref:`sphx_glr_examples_03-harmonic_analyses_00-multi_harmonic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-harmonic response example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Different types of linear dynamics expansions are implemented in DPF. With modal superposition ...">

.. only:: html

  .. image:: /examples/03-harmonic_analyses/images/thumb/sphx_glr_01-modal_superposition_thumb.png
    :alt:

  :ref:`sphx_glr_examples_03-harmonic_analyses_01-modal_superposition.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expand harmonic modal superposition with DPF</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Advanced and miscellaneous examples
===================================
These examples show advanced use cases to demonstrate the high level of workflow customization.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to expand on selected sectors the mesh and results from a multi-stage cy...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_00-multistage_advanced_options_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_00-multistage_advanced_options.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-stage cyclic symmetry using advanced customization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a harmonic (over frequencies) fields container for an analysis...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_01-solve_harmonic_problem_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_01-solve_harmonic_problem.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solve harmonic problem (with damping) using matrix inverse</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to find the minimum list of surrounding elements for a given node to get...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_02-volume_averaged_stress_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_02-volume_averaged_stress.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Average elemental stress on a given volume</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, two DPF servers are started, and a workflow is created with a part on both ser...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_03-exchange_data_between_servers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_03-exchange_data_between_servers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exchange data between servers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_04-extrapolation_stress_3d_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_04-extrapolation_stress_3d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for stress result of a 3D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to compute the stress nodal components from Gaussian points (integration...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_05-extrapolation_strain_2d_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_05-extrapolation_strain_2d.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extrapolation method for strain result of a 2D element</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to plot a stress gradient normal to a selected node. Because the example...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_06-stress_gradient_path_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_06-stress_gradient_path.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Stress gradient normal to a defined node</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to load a plugin that is not loaded automatically.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_07-load_plugin_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_07-load_plugin.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how you can use PyDPF to postprocess a Mechanical model according to ...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_10-asme_secviii_divtwo_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_10-asme_secviii_divtwo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pressure vessel analysis according to an ASME standard</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to generate and use a result file to calculate the cycles to failure res...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_11-cycles_to_failure_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_11-cycles_to_failure.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calculate the number of cycles to fatigue failure</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Solvers usually solve analysis with distributed architecture. In this case, one file is written...">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_12-read_distributed_files_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_12-read_distributed_files.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Read results from distributed files</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to manage the licensing logic of a DPF server using a ServerContext.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_13-manage_licensing_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_13-manage_licensing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Manage the DPF licensing logic using the server context</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to use the incremental evaluation helper.">

.. only:: html

  .. image:: /examples/04-advanced/images/thumb/sphx_glr_14-incremental_evaluation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_04-advanced_14-incremental_evaluation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use incremental evaluation helper</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


File manipulation and input-output examples
===========================================
These examples show how to manipulate files,
as well as importing or exporting from or to specific formats.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use HDF5 format to export and compare simple precision versus double ...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_00-hdf5_double_float_comparison_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_00-hdf5_double_float_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and compare precision</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get reduced matrices and export them to HDF5 and CSV files.">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_01-reduced_matrices_export_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_01-reduced_matrices_export.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get reduced matrices and make export</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows you how to use the HDF5 format to export results and meshed regions in an H5...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_02-hdf5_serialize_and_read_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_02-hdf5_serialize_and_read.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">HDF5 export and import operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to write and upload files on the server machine and then download them b...">

.. only:: html

  .. image:: /examples/05-file-IO/images/thumb/sphx_glr_04-basic-load-file_thumb.png
    :alt:

  :ref:`sphx_glr_examples_05-file-IO_04-basic-load-file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Working with a result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Plotting examples
=================
These examples show how to use the :class:`ansys.dpf.core.plotter.DpfPlotter` class.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example lists the different plotting commands available, shown with the arguments availabl...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_00-basic_plotting_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_00-basic_plotting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Review of available plotting commands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to plot several mesh/result combinations on the same plot so that you ca...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_01-compare_results_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_01-compare_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare results using the plotter</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get a principal stress load case combination using DPF And highlight ...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_02-solution_combination_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_02-solution_combination.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Load case combination for principal stress</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can add use label properties to add custom labels to specific nodes. If the label for a nod...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_03-labels_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_03-labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Add nodal labels on plots</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to get a result mapped over a specific path and how to plot it.">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_04-plot_on_path_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_04-plot_on_path.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot results on a specific path</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to warp the mesh by a vector field, enabling to plot on the deformed geo...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_05-plot_on_warped_mesh_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_05-plot_on_warped_mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Warp the mesh by a field for plotting</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example lists the different commands available for creating animations of transient result...">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_06-animate_results_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_06-animate_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Review of available animation commands</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot on geometry elements">

.. only:: html

  .. image:: /examples/06-plotting/images/thumb/sphx_glr_07-plot_on_geometries_thumb.png
    :alt:

  :ref:`sphx_glr_examples_06-plotting_07-plot_on_geometries.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot on geometry elements</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Examples for postprocessing on distributed processes
====================================================
These examples show how to create workflows on different processes (possibly on
different machines) and connect them.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This diagram helps you to understand this example. It shows the operator chain that is used to ...">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_00-distributed_total_disp_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-distributed-post_00-distributed_total_disp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Postprocessing of displacement on distributed processes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and postprocess distributed files on distributed processes. Afte...">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_01-distributed_workflows_on_remote_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-distributed-post_01-distributed_workflows_on_remote.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a custom workflow on distributed processes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and expand distributed files on distributed processes. The modal...">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_02-distributed-msup_expansion_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-distributed-post_02-distributed-msup_expansion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Distributed mode superposition (MSUP)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to read and expand distributed files on distributed processes. The modal...">

.. only:: html

  .. image:: /examples/07-distributed-post/images/thumb/sphx_glr_03-distributed-msup_expansion_steps_thumb.png
    :alt:

  :ref:`sphx_glr_examples_07-distributed-post_03-distributed-msup_expansion_steps.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Distributed MSUP distributed modal response</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Examples of creating custom operator plugins
============================================
These examples show how to create a basic operator plugin or plug-in
packages with multiple operators. Plugins wrap your custom operators
so that you can use them like native DPF operators.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a basic operator plugin, which is for a single custom operator...">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_00-wrapping_numpy_capabilities_thumb.png
    :alt:

  :ref:`sphx_glr_examples_08-python-operators_00-wrapping_numpy_capabilities.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a basic operator plugin</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a plug-in package with multiple operators. The benefits of wri...">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_01-package_python_operators_thumb.png
    :alt:

  :ref:`sphx_glr_examples_08-python-operators_01-package_python_operators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a plug-in package with multiple operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to create a Python plug-in package with third-party dependencies. You sh...">

.. only:: html

  .. image:: /examples/08-python-operators/images/thumb/sphx_glr_02-python_operators_with_dependencies_thumb.png
    :alt:

  :ref:`sphx_glr_examples_08-python-operators_02-python_operators_with_dependencies.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a plug-in package that has third-party dependencies</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Averaging examples
==================
These examples show how to use some of DPF's averaging operators.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example compares two different workflows that accomplish the same task to show how the ord...">

.. only:: html

  .. image:: /examples/09-averaging/images/thumb/sphx_glr_00-compute_and_average_thumb.png
    :alt:

  :ref:`sphx_glr_examples_09-averaging_00-compute_and_average.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Averaging order</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In multibody simulations, some nodes may be shared by the bodies at their interfaces, but the v...">

.. only:: html

  .. image:: /examples/09-averaging/images/thumb/sphx_glr_01-average_across_bodies_thumb.png
    :alt:

  :ref:`sphx_glr_examples_09-averaging_01-average_across_bodies.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Average across bodies</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Mesh operations examples
===========================================
These examples show how to manipulate meshes.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="    In order to plot the mesh, we add at the end of this example the cell_node connectivity">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_00-create_polygons_and_polyhedrons_thumb.png
    :alt:

  :ref:`sphx_glr_examples_10-mesh_operations_00-create_polygons_and_polyhedrons.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create and display a mesh with polygon and polyhedron elements</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extracting the skin of a mesh to reduce the amount of data to operate on can be useful for spec...">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_05-skin_extraction_thumb.png
    :alt:

  :ref:`sphx_glr_examples_10-mesh_operations_05-skin_extraction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract the skin from a mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Currently, there is no native operator to get nodal coordinates in an Local Coordinate System (...">

.. only:: html

  .. image:: /examples/10-mesh_operations/images/thumb/sphx_glr_13-nodes_in_local_coordinate_system_thumb.png
    :alt:

  :ref:`sphx_glr_examples_10-mesh_operations_13-nodes_in_local_coordinate_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Convert nodal coordinates field to local coordinate system</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Cyclic symmetry examples
========================
These examples show how to post-process cyclic symmetry models.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows a modal cyclic symmetry model with mesh and results expansions.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_01-modal_cyclic_thumb.png
    :alt:

  :ref:`sphx_glr_examples_11-cyclic-symmetry_01-modal_cyclic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Expand mesh and results for modal cyclic symmetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to extract results from a modal cyclic symmetry model.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_02-modal_cyclic_no_expansion_thumb.png
    :alt:

  :ref:`sphx_glr_examples_11-cyclic-symmetry_02-modal_cyclic_no_expansion.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get base and duplicate sectors (real and imaginary) results for modal cyclic symmetry</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to expand the mesh and results from a multi-stage cyclic analysis.">

.. only:: html

  .. image:: /examples/11-cyclic-symmetry/images/thumb/sphx_glr_03-cyclic_multi_stage_thumb.png
    :alt:

  :ref:`sphx_glr_examples_11-cyclic-symmetry_03-cyclic_multi_stage.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-stage cyclic symmetry example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Fluids examples
========================
These examples show how to post-process Fluid models.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to explore Ansys Fluent and Ansys CFX models employing the MeshIn...">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_00-fluids_model_thumb.png
    :alt:

  :ref:`sphx_glr_examples_12-fluids_00-fluids_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore Fluids mesh">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_01-fluids_mesh_thumb.png
    :alt:

  :ref:`sphx_glr_examples_12-fluids_01-fluids_mesh.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids mesh</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore Fluids results">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_02-fluids_results_thumb.png
    :alt:

  :ref:`sphx_glr_examples_12-fluids_02-fluids_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore Fluids results</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to compute iso-surfaces on fluid models.">

.. only:: html

  .. image:: /examples/12-fluids/images/thumb/sphx_glr_03-fluids_isosurface_thumb.png
    :alt:

  :ref:`sphx_glr_examples_12-fluids_03-fluids_isosurface.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute iso-surfaces on fluid models</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Streamlines examples
====================
These examples show how to compute and plot streamlines.




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute and plot 3D streamlines">

.. only:: html

  .. image:: /examples/13-streamlines/images/thumb/sphx_glr_00_plot_3d_streamlines_thumb.png
    :alt:

  :ref:`sphx_glr_examples_13-streamlines_00_plot_3d_streamlines.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute and plot 3D streamlines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute and plot 2D streamlines">

.. only:: html

  .. image:: /examples/13-streamlines/images/thumb/sphx_glr_01_plot_surface_streamlines_thumb.png
    :alt:

  :ref:`sphx_glr_examples_13-streamlines_01_plot_surface_streamlines.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute and plot 2D streamlines</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


LS-Dyna examples
================
These examples show how to post-process LS-Dyna models.




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example provides an overview of the LS-DYNA results providers.">

.. only:: html

  .. image:: /examples/14-lsdyna/images/thumb/sphx_glr_00-lsdyna_operators_thumb.png
    :alt:

  :ref:`sphx_glr_examples_14-lsdyna_00-lsdyna_operators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Results extraction and analysis from LS-DYNA sources</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/00-basic/index.rst
   /examples/01-transient_analyses/index.rst
   /examples/02-modal_analyses/index.rst
   /examples/03-harmonic_analyses/index.rst
   /examples/04-advanced/index.rst
   /examples/05-file-IO/index.rst
   /examples/06-plotting/index.rst
   /examples/07-distributed-post/index.rst
   /examples/08-python-operators/index.rst
   /examples/09-averaging/index.rst
   /examples/10-mesh_operations/index.rst
   /examples/11-cyclic-symmetry/index.rst
   /examples/12-fluids/index.rst
   /examples/13-streamlines/index.rst
   /examples/14-lsdyna/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
